--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -14,6 +14,7 @@
         background: transparent;
         border: 0;
         border-bottom: 1px solid $gray;
+        border-radius: 0;
         outline: none;
         transition: border 0.3s;
         &:hover,
@@ -23,17 +24,13 @@
     }
     .wrap-note-text {
         position: relative;
-        .note-text {
-            text-align: left;
-            &:not(:empty) + label {
-                display: none;
-            }
-        }
         label {
             position: absolute;
-            left: 0;
             top: 1.5rem;
             left: 1rem;
+        }
+        .note-text {
+            text-align: left;
         }
     }
     .button,
@@ -58,10 +55,15 @@
         background: $white;
         border-radius: 3px;
         box-shadow: 0 15px 10px -10px rgba($black, 0.1);
-        .note-text {
-            padding-top: 1rem;
-            padding-bottom: 2rem;
-            line-height: 3rem;
+        .wrap-note-text {
+            label {
+                top: 0;
+            }
+            .note-text {
+                padding-top: 3rem;
+                padding-bottom: 2rem;
+                line-height: 3rem;
+            }
         }
         .button,
         .note-title {
