--- a/styles/global/_default.scss
+++ b/styles/global/_default.scss
@@ -1,4 +1,5 @@
-html {
+:root {
+    --doc-height: 100%;
     font-size: 62.5%;
 }
 
@@ -28,7 +29,8 @@ body {
 .app {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100vh; /* fallback for Js load */
+    min-height: var(--doc-height);
     max-width: 1320px;
     margin: 0 auto;
     padding: 2rem;
